--- a/TPI_GRUPO_25/Web.config
+++ b/TPI_GRUPO_25/Web.config
@@ -1,10 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<appSettings>
+	<connectionStrings>
+  <add name="clinicaTUPConnectionString" connectionString="Data Source=DESKTOP-CK3UGUB\SQLEXPRESS;Initial Catalog=clinicaTUP;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
+ <appSettings>
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
 	</appSettings>
 	<system.web>
