--- a/TPI_GRUPO_25/Web.config
+++ b/TPI_GRUPO_25/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<connectionStrings>
-  <add name="clinicaTUPConnectionString" connectionString="Data Source=DESKTOP-CK3UGUB\SQLEXPRESS;Initial Catalog=clinicaTUP;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
+		<add name="clinicaTUPConnectionString" connectionString="Data Source=DESKTOP-6LDIHKB\SQLEXPRESS;Initial Catalog=clinicaTUP;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
  <appSettings>
