--- a/ENTIDADES/ENTIDADES.csproj
+++ b/ENTIDADES/ENTIDADES.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Medico.cs" />
+    <Compile Include="MedicoCompleto.cs" />
+    <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
