--- a/ENTIDADES/ENTIDADES.csproj
+++ b/ENTIDADES/ENTIDADES.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Persona.cs" />
     <Compile Include="PacienteUpdate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Turnos.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
